--- a/style.css
+++ b/style.css
@@ -1,13 +1,48 @@
 body {
-	font-family: 'Palatino Linotype', 'Book Antiqua', Palatino, serif;
-	text-align: center;
+	font-family: "Century Gothic", CenturyGothic, AppleGothic, sans-serif;
+	/*font-family: 'Palatino Linotype', 'Book Antiqua', Palatino, serif;*/
 	margin: 30px;
+	text-align: center;
 }
 
 h1 {
-	color: violet;
+	color: #0099cc;
+	text-align: center;
+	text-shadow: 2px 2px white;
+	font-size: 36px;
+}
+
+h2 {
+	color: #cc0066;
+	text-align: center;
 }
 
 #image {
-	margin: 30px;
+	/*margin: 5%;*/
+	padding: 2%;
+	width: 30%;
+
+	border-color: #cc0066;
+	border-style: solid;
+	border-radius: 10px;
+	border-width: 4px;
+
+	margin: 0 auto;
+
 }
+
+div.pagelinks{
+	display: inline-block;
+	/*background: black;*/
+	margin-left: 10%;
+	margin-right: 10%;
+	margin-top: 4%;
+}
+
+a {
+	text-decoration: none;
+	font-size: 20px;
+	color: #0099cc;
+
+}
+
