--- a/resume.css
+++ b/resume.css
@@ -1,41 +1,67 @@
 body {
 	text-align: left;
-	border-color: #cc0066;
-	border-style: solid;
-	border-radius: 10px;
-	border-width: 4px;
+	/*border-color: #cc0066;*/
+	/*border-style: solid;*/
+	/*border-radius: 10px;*/
+	/*border-width: 4px;*/
 	/*margin: 10px;*/
-	margin-top: 1%;
-	padding-bottom: 3%;
+	margin: 30px;
 }
 
-h1 {
-	padding: 1%;
+
+h2 {
+	font-family: "Satisfy", serif;
 }
 
 h5 {
 	font-size: 14px;
 }
 
-div{
+
+div.container{
+	text-align: left;
 	background: white;
 	margin-left: 20%;
 	margin-right: 20%;
 	padding: 0.01%;
-
+	/*display: inline-block;*/
 	/*border-radius: 2px;
 	border-color: black;
 	border-style: solid;*/
 }
 
+/*div.inner {
+	display: inline-block;
+}*/
+
+
+
+img {
+	margin-left: 45%;
+	margin-right: 20%;
+	height: 50%;
+	width: 50%;
+	position: relative;
+}
+
+/*
+.halfInfo {
+	float: left;
+	width: 40%;
+
+}*/
+
+.sectiontitle {
+	font-family: "Satisfy", serif;
+}
+
+
 .position {
     font-style: italic;
 }
 
-.job {
-	color: #cc0066;
+#divbar {
+	margin: 0 auto;
 }
 
-.sectiontitle {
-	color: #0099cc;
-}
+
