--- a/style.css
+++ b/style.css
@@ -11,13 +11,18 @@ a {
 	
 }
 
+.header {
+	margin-top: 5vh;
+}
+
 h1 {
 	text-align: left;
 	padding: 0px;
+	margin-top: 0px;
 	margin-left: 0px;
 	margin-right: 0px;
-	margin-bottom: 0px;
-	font-size: 10vh;
+	margin-bottom: 8vh;
+	font-size: 7vh;
 }
 
 h2 {
@@ -30,7 +35,7 @@ h2 {
 	font-family: "Yeseva One", serif;
 	color: black;
 	text-decoration: none;
-	width: 40vw;
+	width: 20vw;
 	text-align: left;
 }
 
@@ -59,7 +64,7 @@ h2 {
 }
 
 #name {
-	width: 40vw;
+	width: 20vw;
 	vertical-align: top;
 	display: inline-block;
 }
@@ -67,9 +72,8 @@ h2 {
 #menu {
 	text-align: right;
 	display: inline-block;
-	width: 40vw;
+	width: 60vw;
 	vertical-align: top;
-
 }
 
 #page {
@@ -93,41 +97,21 @@ img {
 
 }
 
-div.pagelinks{
-	text-align: right;
+.pagelinks {
 	color: black;
-	margin-left: 3%;
-	margin-right: 3%;
-	margin-top: 2%;
-	font-size: 3.5vh;
-	font-family: "Playfair Display", serif;
-	display: block;
-	float: right;
-	clear: right;
-	text-decoration-color: #EC9A29;
-
-}
-
-button {
-	display: block;
-	text-align: right;
-	color: black;
-	margin-left: 3%;
-	margin-right: 3%;
-	margin-top: 2%;
-	font-size: 3.5vh;
+	margin-left: 2%;
+	margin-right: 2%;
+	/*margin-top: 2vh;*/
+	font-size: 2vw;
 	font-family: "Playfair Display", serif;
 	border: none;
 	text-decoration: underline;
 	background: none;
 	outline: none;
 	text-decoration-color: #EC9A29;
-	float: right;
-	clear: right;
-	/*border: 1px solid blue;*/
 }
 
-button:hover, div.pagelinks:hover {
+.pagelinks:hover {
 	background: #EC9A29;
 }
 
@@ -137,7 +121,8 @@ button:hover, div.pagelinks:hover {
 
 #bioText {
 	font-family: "Playfair Display", serif;
-	width: 39vw;
+	width: 40vw;
+	padding-left: 10vw;
 	text-align: right;
 	display: none;
 	vertical-align: top;
