--- a/style.css
+++ b/style.css
@@ -1,5 +1,4 @@
 body {
-
 	font-family: "Yeseva One", serif;
 	text-align: center;
 	color: black;
@@ -87,8 +86,6 @@ h2 {
 	display: inline-block;
 }
 
-
-
 img {
 	height: 50vh;
 	padding: 3vh;
@@ -101,8 +98,7 @@ img {
 	color: black;
 	margin-left: 2%;
 	margin-right: 2%;
-	/*margin-top: 2vh;*/
-	font-size: 2vw;
+	font-size: 3vh;
 	font-family: "Playfair Display", serif;
 	border: none;
 	text-decoration: underline;
@@ -123,13 +119,13 @@ img {
 	font-family: "Playfair Display", serif;
 	width: 40vw;
 	padding-left: 10vw;
-	text-align: right;
+	text-align: justify;
 	display: none;
 	vertical-align: top;
 }
 
 #bioP {
-	font-size: 1.75vw;
+	font-size: 3vh;
 }
 
 #skillsText {
@@ -137,7 +133,6 @@ img {
 	text-align: left;
 	display: none;
 	vertical-align: top;
-
 	position: absolute;
 }
 
@@ -148,7 +143,6 @@ img {
 
 #resumeText {
 	display: none;
-
 	height: 50vh;
 }
 
@@ -165,7 +159,73 @@ img {
 	font-family: "Yeseva One", serif;
 }
 
+#insta {
+	color: #EC9A29;
+}
+
 p, ul {
 	font-family: "Playfair Display", serif;
 	font-size: 1.25vw;
+}
+
+iframe {
+	position:fixed; 
+	top:30vh; 
+	left:10vw; 
+	bottom:0; 
+	right:0; 
+	width:80%; 
+	height:60%; 
+	border:none; 
+	margin:0; 
+	padding:0; 
+	overflow:hidden; 
+	z-index:999999;
+}
+
+@media only screen and (max-width: 1000px) { 
+	.title {
+		display: block;
+		width: 30vw;
+	}
+	.pagelinks {
+	  	width: 60vw;
+		display: block;
+		text-align: left;
+		font-size: 3vh;
+		/*margin-left: 20%;*/
+	}
+	#menu {
+		width: 80vw;
+		padding-bottom: 5vh;
+		margin-left: 0%;
+	}
+
+	#name {
+		width: 80vw;
+	}
+
+	h1 {
+		font-size: 5vh;
+		margin-bottom: 2vh;
+	}
+
+	img {
+		height: 40vh;
+	}
+
+	#bioText {
+		width: 60vw;
+		padding-left: 0vw;
+	}
+
+	#bioP {
+		font-size: 2.25vh;
+	}
+
+	iframe {
+		height: 40%;
+		width: 80%;
+		top: 50%;
+	}
 }
