--- a/style.css
+++ b/style.css
@@ -65,11 +65,15 @@ h2 {
 }
 
 
-#image {
+.image {
 	display: inline-block;
 	padding: 3vh;
 	border-left: 4px solid #9C3848;
 	border-bottom: 4px solid #9C3848;
+}
+
+.bioImage {
+	display: inline-block;
 }
 
 img {
@@ -96,7 +100,7 @@ img {
 #bio {
 	font-family: "Playfair Display", serif;
 	width: 40vw;
-	padding-left: 10vw;
+	padding-left: 5vw;
 	text-align: justify;
 	vertical-align: top;
 	display: inline-block;
@@ -104,7 +108,6 @@ img {
 
 #art-title {
 	padding: 2vh;
-	/*width: vw;*/
 	text-align: center;
 }
 
@@ -114,7 +117,7 @@ img {
 	width: 80vw;
 }
 
-.artImage {
+.art-image {
 	width: 35vw;
 	display: inline-block;
 	padding-bottom: 5vh;
@@ -122,7 +125,7 @@ img {
 }
 
 #bioP {
-	font-size: 3vh;
+	font-size: 2.75vh;
 }
 
 #insta {
@@ -188,18 +191,18 @@ p, ul {
 		height: 40vh;
 	}
 
-	#bioText {
-		width: 60vw;
-		padding-left: 0vw;
-	}
-
-	#bioP {
-		font-size: 2.25vh;
-	}
-
 	iframe {
 		height: 40%;
 		width: 80%;
 		top: 50%;
+	}
+
+	.bioImage {
+		display: none;
+	}
+
+	.art-image {
+		display: block;
+		width: 80vw;
 	}
 }
