Single col photos & contact resize

--- a/style.css
+++ b/style.css
@@ -77,7 +77,7 @@ h2 {
 }
 
 img {
-	height: 50vh;
+	height: 70vh;
 }
 
 .pagelinks {
@@ -112,14 +112,12 @@ img {
 }
 
 .artRow {
-	display: inline-block;
 	text-align: center;
 	width: 80vw;
 }
 
 .art-image {
-	width: 35vw;
-	display: inline-block;
+	width: 80vw;
 	padding-bottom: 5vh;
 	vertical-align: top;
 }
@@ -135,7 +133,7 @@ img {
 .contact-p {
 	padding-left: 2vw;
 	display: inline-block;
-	font-size: 1.5vw;
+	font-size: 1em;
 }
 
 .contact-link {
@@ -148,7 +146,7 @@ img {
 }
 
 #contact-header {
-	font-size: 2.5vw;
+	font-size: 1.5em;
 }
 
 #contact {
