--- a/style.css
+++ b/style.css
@@ -70,6 +70,7 @@ h2 {
 	padding: 3vh;
 	border-left: 4px solid #9C3848;
 	border-bottom: 4px solid #9C3848;
+	height: 50vh;
 }
 
 .bioImage {
@@ -117,9 +118,10 @@ img {
 }
 
 .art-image {
-	width: 80vw;
-	padding-bottom: 5vh;
+	height: 50vh;
+	padding-bottom: 50vh;
 	vertical-align: top;
+
 }
 
 #bioP {
@@ -202,5 +204,6 @@ p, ul {
 	.art-image {
 		display: block;
 		width: 80vw;
+		padding-bottom: 10vh;
 	}
 }
