Add Rocking Stool Project

--- a/docs/templates/nav.html
+++ b/docs/templates/nav.html
@@ -4,7 +4,7 @@
 <!-- <div id="farm-to-frame-link" class="pagelink">Farm To Frame</div> -->
 <!-- <div id="standing-screen-link" class="pagelink">Standing Screen</div> -->
 <div id="rocking-stool-link" class="pagelink">Rocking Stool</div>
-<!-- <div id="woven-stool-link" class="pagelink">Woven Stool</div> -->
+<div id="woven-stool-link" class="pagelink">Woven Stool</div>
 <!-- <div id="serving-tray-link" class="pagelink">Serving Tray</div> -->
 <!-- <div id="rosa-tank-link" class="pagelink">Rosa Tank</div> -->
 <!-- <div id="daydream-cardi-link" class="pagelink">Rambling Roving Cardigan</div> -->
