Add Rosa & Daydream, some formatting

--- a/docs/templates/nav.html
+++ b/docs/templates/nav.html
@@ -6,8 +6,8 @@
 <div id="rocking-stool-link" class="pagelink">Rocking Stool</div>
 <div id="woven-stool-link" class="pagelink">Woven Stool</div>
 <!-- <div id="serving-tray-link" class="pagelink">Serving Tray</div> -->
-<!-- <div id="rosa-tank-link" class="pagelink">Rosa Tank</div> -->
-<!-- <div id="daydream-cardi-link" class="pagelink">Rambling Roving Cardigan</div> -->
+<div id="rosa-tank-link" class="pagelink">Rosa Tank</div>
+<div id="rambling-roving-cardi-link" class="pagelink">Rambling Roving Cardigan</div>
 <div id="paintings-link" class="pagelink">Paintings</div>
 <!-- To add...
 soundscape
@@ -68,8 +68,8 @@ float farm ?
             "html": "rosatank.html"
         },
         {
-            "linkId": "#daydream-cardi-link",
-            "html": "daydream-cardi.html"
+            "linkId": "#rambling-roving-cardi-link",
+            "html": "rambling-roving-cardi.html"
         },
         {
             "linkId": "#paintings-link",
