--- a/docs/css/page.css
+++ b/docs/css/page.css
@@ -35,6 +35,10 @@
     opacity: 50%;
 }
 
+.round-corners {
+	border-radius: 25px;
+}
+
 @media only screen and (max-width: 1000px) {
 	.page-title {
 		margin-top: 5vh;
