--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -179,13 +179,20 @@ img {
 
 .content-gallery-full {
 	display: block;
-	margin: 3vw;
+	margin:	3vw;
+	margin-left: 0;
 	width: 56vw;
+}
+
+.content-row {
+	margin-left: 0;
+	margin-top: 5vh;
+	margin-bottom: 5vh;
 }
 
 .content-gallery {
 	width: 25vw;
-	margin: 3vw;
+	margin-right: 6vw;
 	vertical-align: top;
 	display: inline-block;
 }
